--- a/results/2021.md
+++ b/results/2021.md
@@ -1,226 +1,230 @@
 # Total Vaccinations
 Vax Type | Vaccinations
 --- | ---
-COVID19 | 429009
-UNK | 2275
-VARZOS | 1094
-FLU4 | 511
-FLUX | 223
-FLUC4 | 162
-PNC13 | 147
-PPV | 119
-TDAP | 104
-HPV9 | 103
-MMR | 92
-VARCEL | 87
-HEPA | 77
-MNQ | 76
-FLUA4 | 69
-HEP | 67
-HIBV | 64
-FLUR4 | 63
-DTAP | 54
-MMRV | 48
-MENB | 46
-RV5 | 45
-DTAPIPVHIB | 44
-DTAPHEPBIP | 41
-DTAPIPV | 36
-FLUA3 | 33
-IPV | 26
-FLU3 | 18
-ANTH | 18
-RV1 | 14
-HPV4 | 14
-FLUC3 | 13
-RAB | 13
-ADEN_4_7 | 11
-CHOL | 9
-TYP | 9
-HEPAB | 8
-TTOX | 7
-FLUN4 | 6
-DF | 5
-DT | 4
-FLUX(H1N1) | 4
-EBZR | 3
-TD | 3
+COVID19 | 494251
+UNK | 2970
+VARZOS | 2829
+FLU4 | 630
+HPV9 | 304
+PNC13 | 300
+FLUX | 299
+TDAP | 261
+PPV | 246
+MMR | 231
+VARCEL | 228
+HEPA | 217
+MNQ | 209
+HEP | 188
+FLUC4 | 171
+HIBV | 166
+MMRV | 163
+RV5 | 143
+DTAP | 137
+MENB | 133
+DTAPIPVHIB | 107
+DTAPIPV | 103
+DTAPHEPBIP | 93
+RAB | 91
+FLUA4 | 80
+FLUR4 | 79
+IPV | 62
+FLUA3 | 44
+RV1 | 41
+HPV4 | 38
+FLU3 | 32
+TYP | 29
+HEPAB | 28
+ANTH | 24
+TD | 22
+FLUC3 | 17
+YF | 16
+MEN | 14
+CHOL | 13
+ADEN_4_7 | 13
+FLUN4 | 12
+EBZR | 12
+DT | 11
+TTOX | 11
+SMALL | 11
+DF | 8
+FLUX(H1N1) | 5
+RVX | 5
+JEV1 | 5
+DTP | 4
+PNC | 4
 HPVX | 3
-RVX | 3
-JEV1 | 3
-MEN | 3
-YF | 3
+FLUN3 | 3
 FLU(H1N1) | 2
-SMALL | 2
-DTP | 1
-PNC | 1
 OPV | 1
 MENHIB | 1
-FLUN3 | 1
 MNQHIB | 1
 ---
 Vax ID | Vaccinations
 --- | ---
-COVID19-MODERNA | 192274
-COVID19-PFIZER\BIONTECH | 191749
-COVID19-JANSSEN | 44001
-UNK-UNKNOWN MANUFACTURER | 2275
-COVID19-UNKNOWN MANUFACTURER | 985
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 496
-VARZOS-UNKNOWN MANUFACTURER | 424
-FLU4-SANOFI PASTEUR | 267
-FLUX-UNKNOWN MANUFACTURER | 210
-VARZOS-MERCK & CO. INC. | 174
-FLUC4-SEQIRUS, INC. | 162
-PNC13-PFIZER\WYETH | 147
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 128
-FLU4-SEQIRUS, INC. | 116
-PPV-MERCK & CO. INC. | 103
-HPV9-MERCK & CO. INC. | 103
-MMR-MERCK & CO. INC. | 89
-VARCEL-MERCK & CO. INC. | 85
-FLUA4-SEQIRUS, INC. | 69
-FLUR4-PROTEIN SCIENCES CORPORATION | 63
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 50
-MNQ-SANOFI PASTEUR | 50
-TDAP-SANOFI PASTEUR | 49
-MMRV-MERCK & CO. INC. | 48
-RV5-MERCK & CO. INC. | 45
-DTAPIPVHIB-SANOFI PASTEUR | 43
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 42
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 41
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 33
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 33
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 33
-HEPA-MERCK & CO. INC. | 33
-HIBV-SANOFI PASTEUR | 29
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 26
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 24
-HIBV-MERCK & CO. INC. | 23
-IPV-SANOFI PASTEUR | 23
-DTAP-SANOFI PASTEUR | 22
-DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 20
-HEP-MERCK & CO. INC. | 19
-PPV-UNKNOWN MANUFACTURER | 16
-DTAPIPV-SANOFI PASTEUR | 16
-ANTH-EMERGENT BIOSOLUTIONS | 16
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 14
-HPV4-MERCK & CO. INC. | 14
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 13
-MENB-PFIZER\WYETH | 13
+COVID19-MODERNA | 229059
+COVID19-PFIZER\BIONTECH | 215970
+COVID19-JANSSEN | 48159
+UNK-UNKNOWN MANUFACTURER | 2970
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 1805
+COVID19-UNKNOWN MANUFACTURER | 1063
+VARZOS-UNKNOWN MANUFACTURER | 717
+FLU4-SANOFI PASTEUR | 332
+VARZOS-MERCK & CO. INC. | 307
+HPV9-MERCK & CO. INC. | 304
+PNC13-PFIZER\WYETH | 300
+FLUX-UNKNOWN MANUFACTURER | 286
+MMR-MERCK & CO. INC. | 225
+VARCEL-MERCK & CO. INC. | 224
+PPV-MERCK & CO. INC. | 201
+FLUC4-SEQIRUS, INC. | 171
+MMRV-MERCK & CO. INC. | 163
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 156
+RV5-MERCK & CO. INC. | 143
+FLU4-SEQIRUS, INC. | 142
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 130
+MNQ-SANOFI PASTEUR | 120
+TDAP-SANOFI PASTEUR | 117
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 112
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 107
+DTAPIPVHIB-SANOFI PASTEUR | 106
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 104
+HEPA-MERCK & CO. INC. | 97
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 93
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 88
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 83
+FLUA4-SEQIRUS, INC. | 80
+FLUR4-PROTEIN SCIENCES CORPORATION | 79
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 79
+HIBV-SANOFI PASTEUR | 74
+DTAP-SANOFI PASTEUR | 65
+HIBV-MERCK & CO. INC. | 61
+IPV-SANOFI PASTEUR | 52
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 51
+PPV-UNKNOWN MANUFACTURER | 45
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 44
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 41
+HPV4-MERCK & CO. INC. | 38
+HEP-MERCK & CO. INC. | 34
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 29
+MENB-PFIZER\WYETH | 29
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 28
+DTAPIPV-SANOFI PASTEUR | 24
+ANTH-EMERGENT BIOSOLUTIONS | 22
+DTAP-UNKNOWN MANUFACTURER | 21
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 21
+FLU3-SANOFI PASTEUR | 20
+HEP-UNKNOWN MANUFACTURER | 18
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 17
+TYP-SANOFI PASTEUR | 17
+YF-SANOFI PASTEUR | 16
+TDAP-UNKNOWN MANUFACTURER | 14
+MEN-UNKNOWN MANUFACTURER | 14
 FLUX-SANOFI PASTEUR | 13
-FLU3-SANOFI PASTEUR | 11
-ADEN_4_7-TEVA PHARMACEUTICALS | 11
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 11
-HEP-UNKNOWN MANUFACTURER | 8
-DTAP-UNKNOWN MANUFACTURER | 8
-CHOL-PAXVAX | 8
-HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 8
-TTOX-UNKNOWN MANUFACTURER | 7
-HIBV-GLAXOSMITHKLINE BIOLOGICALS | 7
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 7
-FLUN4-MEDIMMUNE VACCINES, INC. | 6
-TYP-BERNA BIOTECH, LTD. | 6
-TDAP-UNKNOWN MANUFACTURER | 5
-DF-SANOFI PASTEUR | 5
-HIBV-UNKNOWN MANUFACTURER | 5
-FLUX(H1N1)-UNKNOWN MANUFACTURER | 4
-TYP-SANOFI PASTEUR | 3
-EBZR-MERCK & CO. INC. | 3
+ADEN_4_7-TEVA PHARMACEUTICALS | 13
+FLUN4-MEDIMMUNE VACCINES, INC. | 12
+CHOL-PAXVAX | 12
+EBZR-MERCK & CO. INC. | 12
+TYP-BERNA BIOTECH, LTD. | 12
+TD-SANOFI PASTEUR | 12
+TTOX-UNKNOWN MANUFACTURER | 11
+IPV-UNKNOWN MANUFACTURER | 10
+HIBV-UNKNOWN MANUFACTURER | 10
+SMALL-SANOFI PASTEUR | 10
+DT-SANOFI PASTEUR | 9
+DF-SANOFI PASTEUR | 8
+HEPA-UNKNOWN MANUFACTURER | 8
+MMR-UNKNOWN MANUFACTURER | 6
+TD-UNKNOWN MANUFACTURER | 5
+FLU3-GLAXOSMITHKLINE BIOLOGICALS | 5
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 5
+RVX-UNKNOWN MANUFACTURER | 5
+JEV1-INTERCELL AG | 5
+RAB-SANOFI PASTEUR | 5
+TD-MASS. PUB HLTH BIOL LAB | 5
+DTP-UNKNOWN MANUFACTURER | 4
+PNC-PFIZER\WYETH | 4
+FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 4
 FLU3-CSL LIMITED | 3
-FLU3-GLAXOSMITHKLINE BIOLOGICALS | 3
 HPVX-UNKNOWN MANUFACTURER | 3
-RVX-UNKNOWN MANUFACTURER | 3
-IPV-UNKNOWN MANUFACTURER | 3
-DT-SANOFI PASTEUR | 3
-JEV1-INTERCELL AG | 3
-MEN-UNKNOWN MANUFACTURER | 3
-MMR-UNKNOWN MANUFACTURER | 3
-YF-SANOFI PASTEUR | 3
+RAB-UNKNOWN MANUFACTURER | 3
+VARCEL-UNKNOWN MANUFACTURER | 3
+FLUN3-MEDIMMUNE VACCINES, INC. | 3
+DT-UNKNOWN MANUFACTURER | 2
 ANTH-UNKNOWN MANUFACTURER | 2
-RAB-UNKNOWN MANUFACTURER | 2
-HEPA-UNKNOWN MANUFACTURER | 2
 CHOL-UNKNOWN MANUFACTURER | 1
-DT-UNKNOWN MANUFACTURER | 1
-TD-UNKNOWN MANUFACTURER | 1
 DTAPIPVHIB-UNKNOWN MANUFACTURER | 1
-DTP-UNKNOWN MANUFACTURER | 1
-PNC-PFIZER\WYETH | 1
 OPV-UNKNOWN MANUFACTURER | 1
-TD-MASS. PUB HLTH BIOL LAB | 1
-VARCEL-UNKNOWN MANUFACTURER | 1
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
 FLU(H1N1)-SANOFI PASTEUR | 1
-TD-SANOFI PASTEUR | 1
-FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 1
-SMALL-SANOFI PASTEUR | 1
-FLUN3-MEDIMMUNE VACCINES, INC. | 1
 SMALL-UNKNOWN MANUFACTURER | 1
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 1
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 1
+MNQ-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
 --- | ---
-COVID19 | 6000
-UNK | 121
-VARZOS | 21
+COVID19 | 6844
+UNK | 135
+VARZOS | 24
+FLU4 | 12
 PNC13 | 12
-FLU4 | 11
 FLUX | 11
-HEP | 9
-DTAPIPVHIB | 7
+HEP | 10
+DTAPIPVHIB | 8
+HIBV | 7
 PPV | 6
-HIBV | 5
+RAB | 6
+HEPA | 5
 RV5 | 5
-HEPA | 4
-DTAP | 3
-MMR | 2
-VARCEL | 2
+MMR | 4
+DTAP | 4
+VARCEL | 3
+DTAPHEPBIP | 3
+HPV9 | 3
 TDAP | 2
-RAB | 2
-DTAPHEPBIP | 2
 MMRV | 2
-HPV9 | 2
 RV1 | 2
 MENB | 1
 FLUR4 | 1
 MNQ | 1
 MEN | 1
 FLUC4 | 1
+HPV4 | 1
+DT | 1
 ---
 Vax ID | Deaths
 --- | ---
-COVID19-MODERNA | 2767
-COVID19-PFIZER\BIONTECH | 2685
-COVID19-JANSSEN | 522
-UNK-UNKNOWN MANUFACTURER | 121
-COVID19-UNKNOWN MANUFACTURER | 26
+COVID19-PFIZER\BIONTECH | 3148
+COVID19-MODERNA | 3058
+COVID19-JANSSEN | 610
+UNK-UNKNOWN MANUFACTURER | 135
+COVID19-UNKNOWN MANUFACTURER | 28
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 13
 PNC13-PFIZER\WYETH | 12
 FLUX-UNKNOWN MANUFACTURER | 11
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 11
-FLU4-SANOFI PASTEUR | 9
-DTAPIPVHIB-SANOFI PASTEUR | 7
+FLU4-SANOFI PASTEUR | 10
+DTAPIPVHIB-SANOFI PASTEUR | 8
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 6
 VARZOS-UNKNOWN MANUFACTURER | 6
+VARZOS-MERCK & CO. INC. | 5
 PPV-MERCK & CO. INC. | 5
 RV5-MERCK & CO. INC. | 5
 HEP-MERCK & CO. INC. | 5
-VARZOS-MERCK & CO. INC. | 4
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 4
+MMR-MERCK & CO. INC. | 4
+VARCEL-MERCK & CO. INC. | 3
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 3
-MMR-MERCK & CO. INC. | 2
-VARCEL-MERCK & CO. INC. | 2
+HIBV-MERCK & CO. INC. | 3
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 3
+HIBV-SANOFI PASTEUR | 3
+DTAP-SANOFI PASTEUR | 3
+HPV9-MERCK & CO. INC. | 3
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 2
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 2
-HIBV-MERCK & CO. INC. | 2
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 2
-HIBV-SANOFI PASTEUR | 2
 MMRV-MERCK & CO. INC. | 2
-DTAP-SANOFI PASTEUR | 2
-HPV9-MERCK & CO. INC. | 2
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 2
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 1
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 1
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1
 PPV-UNKNOWN MANUFACTURER | 1
@@ -231,166 +235,171 @@ TDAP-UNKNOWN MANUFACTURER | 1
 MEN-UNKNOWN MANUFACTURER | 1
 FLUC4-SEQIRUS, INC. | 1
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
+HEPA-MERCK & CO. INC. | 1
+HPV4-MERCK & CO. INC. | 1
+DT-SANOFI PASTEUR | 1
 ---
 # Total Symptoms
 Vax Type | Symptoms
 --- | ---
-COVID19 | 1873330
-UNK | 10619
-VARZOS | 4061
-FLU4 | 1962
-PNC13 | 933
-FLUX | 829
-HPV9 | 721
-FLUC4 | 603
-PPV | 575
-TDAP | 524
-MMR | 431
-HEP | 415
-VARCEL | 415
-HEPA | 391
-RV5 | 356
-DTAPIPVHIB | 355
-HIBV | 341
-FLUA4 | 323
-MNQ | 301
-DTAP | 265
-DTAPHEPBIP | 245
-MENB | 196
-FLUR4 | 193
-MMRV | 185
-HPV4 | 156
-RV1 | 152
-DTAPIPV | 152
-ANTH | 128
-IPV | 117
-FLUA3 | 108
-DF | 91
-FLU3 | 76
-RAB | 75
-ADEN_4_7 | 52
+COVID19 | 2148384
+UNK | 13557
+VARZOS | 10032
+FLU4 | 2516
+PNC13 | 1448
+HPV9 | 1358
+TDAP | 1150
+FLUX | 1102
+PPV | 1095
+MMR | 840
+HEP | 788
+VARCEL | 783
+HIBV | 761
+HEPA | 722
+MNQ | 696
+RV5 | 657
+FLUC4 | 650
+DTAP | 605
+MENB | 527
+DTAPIPVHIB | 524
+MMRV | 454
+DTAPHEPBIP | 418
+FLUA4 | 393
+HPV4 | 389
+RAB | 358
+DTAPIPV | 315
+FLUR4 | 261
+RV1 | 245
+IPV | 234
+FLUA3 | 170
+ANTH | 142
+FLU3 | 130
+DF | 104
+SMALL | 81
+FLUC3 | 73
+TYP | 73
+TD | 73
+EBZR | 69
+ADEN_4_7 | 68
+PNC | 65
+YF | 60
+HEPAB | 60
+FLUN4 | 53
 RVX | 49
-FLUN4 | 42
-FLUC3 | 40
+CHOL | 47
+DT | 43
 HPVX | 39
-CHOL | 33
-TYP | 28
-TTOX | 18
-EBZR | 18
-JEV1 | 18
-YF | 17
-DT | 16
-HEPAB | 16
+JEV1 | 28
+TTOX | 27
+MEN | 27
+FLUX(H1N1) | 11
+DTP | 10
 OPV | 10
 FLU(H1N1) | 10
-FLUX(H1N1) | 9
-TD | 6
 MNQHIB | 5
-MEN | 4
-SMALL | 4
-PNC | 2
-DTP | 1
+FLUN3 | 3
 MENHIB | 1
-FLUN3 | 1
 ---
 Vax ID | Symptoms
 --- | ---
-COVID19-MODERNA | 851649
-COVID19-PFIZER\BIONTECH | 808155
-COVID19-JANSSEN | 208955
-UNK-UNKNOWN MANUFACTURER | 10619
-COVID19-UNKNOWN MANUFACTURER | 4571
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 2316
-VARZOS-UNKNOWN MANUFACTURER | 1198
-FLU4-SANOFI PASTEUR | 1034
-PNC13-PFIZER\WYETH | 933
-FLUX-UNKNOWN MANUFACTURER | 813
-HPV9-MERCK & CO. INC. | 721
-FLUC4-SEQIRUS, INC. | 603
-VARZOS-MERCK & CO. INC. | 547
-PPV-MERCK & CO. INC. | 515
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 504
-FLU4-SEQIRUS, INC. | 424
-MMR-MERCK & CO. INC. | 418
-VARCEL-MERCK & CO. INC. | 407
-RV5-MERCK & CO. INC. | 356
-DTAPIPVHIB-SANOFI PASTEUR | 353
-FLUA4-SEQIRUS, INC. | 323
-TDAP-SANOFI PASTEUR | 296
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 245
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 219
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 195
-FLUR4-PROTEIN SCIENCES CORPORATION | 193
-MNQ-SANOFI PASTEUR | 193
-MMRV-MERCK & CO. INC. | 185
-HIBV-SANOFI PASTEUR | 178
-HPV4-MERCK & CO. INC. | 156
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 152
-HEPA-MERCK & CO. INC. | 148
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 146
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 134
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 128
-HEP-MERCK & CO. INC. | 121
-ANTH-EMERGENT BIOSOLUTIONS | 121
-HEP-UNKNOWN MANUFACTURER | 115
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 108
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 108
-IPV-SANOFI PASTEUR | 101
-DTAP-SANOFI PASTEUR | 97
-HIBV-MERCK & CO. INC. | 96
-DF-SANOFI PASTEUR | 91
-DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 78
-DTAPIPV-SANOFI PASTEUR | 74
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 71
-MENB-PFIZER\WYETH | 68
-PPV-UNKNOWN MANUFACTURER | 60
-ADEN_4_7-TEVA PHARMACEUTICALS | 52
+COVID19-MODERNA | 997753
+COVID19-PFIZER\BIONTECH | 917289
+COVID19-JANSSEN | 228409
+UNK-UNKNOWN MANUFACTURER | 13557
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 7112
+COVID19-UNKNOWN MANUFACTURER | 4933
+VARZOS-UNKNOWN MANUFACTURER | 1962
+PNC13-PFIZER\WYETH | 1448
+HPV9-MERCK & CO. INC. | 1358
+FLU4-SANOFI PASTEUR | 1314
+FLUX-UNKNOWN MANUFACTURER | 1086
+VARZOS-MERCK & CO. INC. | 958
+PPV-MERCK & CO. INC. | 905
+MMR-MERCK & CO. INC. | 816
+VARCEL-MERCK & CO. INC. | 769
+RV5-MERCK & CO. INC. | 657
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 653
+FLUC4-SEQIRUS, INC. | 650
+TDAP-SANOFI PASTEUR | 570
+FLU4-SEQIRUS, INC. | 549
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 524
+DTAPIPVHIB-SANOFI PASTEUR | 522
+MMRV-MERCK & CO. INC. | 454
+MNQ-SANOFI PASTEUR | 419
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 418
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 399
+FLUA4-SEQIRUS, INC. | 393
+HPV4-MERCK & CO. INC. | 389
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 380
+HIBV-SANOFI PASTEUR | 366
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 356
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 339
+HEPA-MERCK & CO. INC. | 303
+DTAP-SANOFI PASTEUR | 279
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 275
+FLUR4-PROTEIN SCIENCES CORPORATION | 261
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 245
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 230
+HIBV-MERCK & CO. INC. | 226
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 212
+IPV-SANOFI PASTEUR | 196
+PPV-UNKNOWN MANUFACTURER | 190
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 170
+HEP-MERCK & CO. INC. | 170
+HEP-UNKNOWN MANUFACTURER | 154
+ANTH-EMERGENT BIOSOLUTIONS | 135
+MENB-PFIZER\WYETH | 128
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 108
+DF-SANOFI PASTEUR | 104
+DTAPIPV-SANOFI PASTEUR | 103
+HIBV-UNKNOWN MANUFACTURER | 98
+DTAP-UNKNOWN MANUFACTURER | 96
+SMALL-SANOFI PASTEUR | 79
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 73
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 71
+EBZR-MERCK & CO. INC. | 69
+ADEN_4_7-TEVA PHARMACEUTICALS | 68
+PNC-PFIZER\WYETH | 65
+YF-SANOFI PASTEUR | 60
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 60
+TDAP-UNKNOWN MANUFACTURER | 56
+FLU3-SANOFI PASTEUR | 55
+TYP-SANOFI PASTEUR | 54
+FLUN4-MEDIMMUNE VACCINES, INC. | 53
 RVX-UNKNOWN MANUFACTURER | 49
-FLUN4-MEDIMMUNE VACCINES, INC. | 42
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 40
+CHOL-PAXVAX | 45
 HPVX-UNKNOWN MANUFACTURER | 39
-HIBV-UNKNOWN MANUFACTURER | 37
-DTAP-UNKNOWN MANUFACTURER | 34
-TDAP-UNKNOWN MANUFACTURER | 33
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 33
-CHOL-PAXVAX | 31
-HIBV-GLAXOSMITHKLINE BIOLOGICALS | 30
+HEPA-UNKNOWN MANUFACTURER | 39
+IPV-UNKNOWN MANUFACTURER | 38
+DT-SANOFI PASTEUR | 38
+FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 34
 FLU3-CSL LIMITED | 28
-FLU3-SANOFI PASTEUR | 27
-HEPA-UNKNOWN MANUFACTURER | 24
-TTOX-UNKNOWN MANUFACTURER | 18
-TYP-SANOFI PASTEUR | 18
-EBZR-MERCK & CO. INC. | 18
-JEV1-INTERCELL AG | 18
-YF-SANOFI PASTEUR | 17
-FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 17
-HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 16
+JEV1-INTERCELL AG | 28
+TD-SANOFI PASTEUR | 28
+TTOX-UNKNOWN MANUFACTURER | 27
+MEN-UNKNOWN MANUFACTURER | 27
+TD-UNKNOWN MANUFACTURER | 26
+MMR-UNKNOWN MANUFACTURER | 24
+TYP-BERNA BIOTECH, LTD. | 19
+TD-MASS. PUB HLTH BIOL LAB | 19
 FLUX-SANOFI PASTEUR | 16
-IPV-UNKNOWN MANUFACTURER | 16
-DT-SANOFI PASTEUR | 14
-MMR-UNKNOWN MANUFACTURER | 13
-TYP-BERNA BIOTECH, LTD. | 10
+FLU3-GLAXOSMITHKLINE BIOLOGICALS | 13
+RAB-SANOFI PASTEUR | 12
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 11
+DTP-UNKNOWN MANUFACTURER | 10
 OPV-UNKNOWN MANUFACTURER | 10
-FLUX(H1N1)-UNKNOWN MANUFACTURER | 9
+VARCEL-UNKNOWN MANUFACTURER | 10
 ANTH-UNKNOWN MANUFACTURER | 7
+RAB-UNKNOWN MANUFACTURER | 7
+DT-UNKNOWN MANUFACTURER | 5
 FLU(H1N1)-SANOFI PASTEUR | 5
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 5
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 5
-FLU3-GLAXOSMITHKLINE BIOLOGICALS | 4
-RAB-UNKNOWN MANUFACTURER | 4
-MEN-UNKNOWN MANUFACTURER | 4
-VARCEL-UNKNOWN MANUFACTURER | 4
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 4
-TD-UNKNOWN MANUFACTURER | 3
+FLUN3-MEDIMMUNE VACCINES, INC. | 3
 CHOL-UNKNOWN MANUFACTURER | 2
-DT-UNKNOWN MANUFACTURER | 2
 DTAPIPVHIB-UNKNOWN MANUFACTURER | 2
-PNC-PFIZER\WYETH | 2
-TD-SANOFI PASTEUR | 2
-SMALL-SANOFI PASTEUR | 2
 SMALL-UNKNOWN MANUFACTURER | 2
-DTP-UNKNOWN MANUFACTURER | 1
-TD-MASS. PUB HLTH BIOL LAB | 1
+MNQ-UNKNOWN MANUFACTURER | 2
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
-FLUN3-MEDIMMUNE VACCINES, INC. | 1
 ---
