--- a/results/2021.md
+++ b/results/2021.md
@@ -1,405 +1,501 @@
 # Total Vaccinations
 Vax Type | Vaccinations
 --- | ---
-COVID19 | 494251
-UNK | 2970
-VARZOS | 2829
-FLU4 | 630
-HPV9 | 304
-PNC13 | 300
-FLUX | 299
-TDAP | 261
-PPV | 246
-MMR | 231
-VARCEL | 228
-HEPA | 217
-MNQ | 209
-HEP | 188
-FLUC4 | 171
-HIBV | 166
-MMRV | 163
-RV5 | 143
-DTAP | 137
-MENB | 133
-DTAPIPVHIB | 107
-DTAPIPV | 103
-DTAPHEPBIP | 93
-RAB | 91
-FLUA4 | 80
-FLUR4 | 79
-IPV | 62
-FLUA3 | 44
-RV1 | 41
-HPV4 | 38
-FLU3 | 32
-TYP | 29
-HEPAB | 28
-ANTH | 24
-TD | 22
-FLUC3 | 17
-YF | 16
-MEN | 14
-CHOL | 13
-ADEN_4_7 | 13
-FLUN4 | 12
-EBZR | 12
-DT | 11
-TTOX | 11
-SMALL | 11
-DF | 8
-FLUX(H1N1) | 5
-RVX | 5
-JEV1 | 5
-DTP | 4
-PNC | 4
-HPVX | 3
-FLUN3 | 3
+COVID19 | 720091
+VARZOS | 13909
+UNK | 9567
+FLU4 | 5195
+HPV9 | 1790
+VARCEL | 1729
+TDAP | 1630
+PPV | 1585
+HEPA | 1386
+MMR | 1377
+MNQ | 1365
+HEP | 1338
+FLUX | 1284
+MMRV | 1224
+PNC13 | 1064
+HIBV | 897
+DTAP | 761
+MENB | 753
+DTAPIPV | 742
+RV5 | 706
+FLUA4 | 681
+FLUC4 | 661
+DTAPIPVHIB | 568
+FLUR4 | 510
+DTAPHEPBIP | 425
+IPV | 408
+HEPAB | 191
+TYP | 190
+RAB | 183
+RV1 | 180
+FLU3 | 168
+TD | 162
+HPV4 | 138
+ANTH | 116
+FLUA3 | 105
+YF | 95
+FLUN4 | 63
+FLUC3 | 63
+MEN | 53
+ADEN_4_7 | 42
+EBZR | 40
+TTOX | 37
+CHOL | 28
+DF | 28
+SMALL | 27
+DT | 26
+PNC | 23
+HPVX | 22
+JEV1 | 17
+DTP | 14
+DTPPVHBHPB | 14
+RVX | 12
+FLUX(H1N1) | 9
+6VAX-F | 8
+BCG | 5
+FLUN3 | 5
+OPV | 2
 FLU(H1N1) | 2
-OPV | 1
+JEVX | 2
+FLUR3 | 2
+PER | 1
+TDAPIPV | 1
 MENHIB | 1
 MNQHIB | 1
+DTPHEP | 1
+DTOX | 1
+MU | 1
+HEPATYP | 1
+PNC10 | 1
+H5N1 | 1
 ---
 Vax ID | Vaccinations
 --- | ---
-COVID19-MODERNA | 229059
-COVID19-PFIZER\BIONTECH | 215970
-COVID19-JANSSEN | 48159
-UNK-UNKNOWN MANUFACTURER | 2970
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 1805
-COVID19-UNKNOWN MANUFACTURER | 1063
-VARZOS-UNKNOWN MANUFACTURER | 717
-FLU4-SANOFI PASTEUR | 332
-VARZOS-MERCK & CO. INC. | 307
-HPV9-MERCK & CO. INC. | 304
-PNC13-PFIZER\WYETH | 300
-FLUX-UNKNOWN MANUFACTURER | 286
-MMR-MERCK & CO. INC. | 225
-VARCEL-MERCK & CO. INC. | 224
-PPV-MERCK & CO. INC. | 201
-FLUC4-SEQIRUS, INC. | 171
-MMRV-MERCK & CO. INC. | 163
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 156
-RV5-MERCK & CO. INC. | 143
-FLU4-SEQIRUS, INC. | 142
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 130
-MNQ-SANOFI PASTEUR | 120
-TDAP-SANOFI PASTEUR | 117
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 112
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 107
-DTAPIPVHIB-SANOFI PASTEUR | 106
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 104
-HEPA-MERCK & CO. INC. | 97
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 93
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 88
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 83
-FLUA4-SEQIRUS, INC. | 80
-FLUR4-PROTEIN SCIENCES CORPORATION | 79
-DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 79
-HIBV-SANOFI PASTEUR | 74
-DTAP-SANOFI PASTEUR | 65
-HIBV-MERCK & CO. INC. | 61
-IPV-SANOFI PASTEUR | 52
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 51
-PPV-UNKNOWN MANUFACTURER | 45
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 44
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 41
-HPV4-MERCK & CO. INC. | 38
-HEP-MERCK & CO. INC. | 34
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 29
-MENB-PFIZER\WYETH | 29
-HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 28
-DTAPIPV-SANOFI PASTEUR | 24
-ANTH-EMERGENT BIOSOLUTIONS | 22
-DTAP-UNKNOWN MANUFACTURER | 21
-HIBV-GLAXOSMITHKLINE BIOLOGICALS | 21
-FLU3-SANOFI PASTEUR | 20
-HEP-UNKNOWN MANUFACTURER | 18
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 17
-TYP-SANOFI PASTEUR | 17
-YF-SANOFI PASTEUR | 16
-TDAP-UNKNOWN MANUFACTURER | 14
-MEN-UNKNOWN MANUFACTURER | 14
-FLUX-SANOFI PASTEUR | 13
-ADEN_4_7-TEVA PHARMACEUTICALS | 13
-FLUN4-MEDIMMUNE VACCINES, INC. | 12
-CHOL-PAXVAX | 12
-EBZR-MERCK & CO. INC. | 12
-TYP-BERNA BIOTECH, LTD. | 12
-TD-SANOFI PASTEUR | 12
-TTOX-UNKNOWN MANUFACTURER | 11
-IPV-UNKNOWN MANUFACTURER | 10
-HIBV-UNKNOWN MANUFACTURER | 10
-SMALL-SANOFI PASTEUR | 10
-DT-SANOFI PASTEUR | 9
-DF-SANOFI PASTEUR | 8
-HEPA-UNKNOWN MANUFACTURER | 8
-MMR-UNKNOWN MANUFACTURER | 6
-TD-UNKNOWN MANUFACTURER | 5
-FLU3-GLAXOSMITHKLINE BIOLOGICALS | 5
-FLUX(H1N1)-UNKNOWN MANUFACTURER | 5
-RVX-UNKNOWN MANUFACTURER | 5
-JEV1-INTERCELL AG | 5
-RAB-SANOFI PASTEUR | 5
-TD-MASS. PUB HLTH BIOL LAB | 5
-DTP-UNKNOWN MANUFACTURER | 4
-PNC-PFIZER\WYETH | 4
-FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 4
-FLU3-CSL LIMITED | 3
-HPVX-UNKNOWN MANUFACTURER | 3
-RAB-UNKNOWN MANUFACTURER | 3
-VARCEL-UNKNOWN MANUFACTURER | 3
-FLUN3-MEDIMMUNE VACCINES, INC. | 3
-DT-UNKNOWN MANUFACTURER | 2
-ANTH-UNKNOWN MANUFACTURER | 2
+COVID19-MODERNA | 332173
+COVID19-PFIZER\BIONTECH | 323644
+COVID19-JANSSEN | 62704
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 9922
+UNK-UNKNOWN MANUFACTURER | 9566
+VARZOS-UNKNOWN MANUFACTURER | 3350
+FLU4-SANOFI PASTEUR | 2759
+HPV9-MERCK & CO. INC. | 1790
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1725
+VARCEL-MERCK & CO. INC. | 1706
+COVID19-UNKNOWN MANUFACTURER | 1570
+PPV-MERCK & CO. INC. | 1454
+MMR-MERCK & CO. INC. | 1343
+FLUX-UNKNOWN MANUFACTURER | 1260
+MMRV-MERCK & CO. INC. | 1219
+PNC13-PFIZER\WYETH | 1064
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 853
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 803
+MNQ-SANOFI PASTEUR | 776
+TDAP-SANOFI PASTEUR | 717
+FLU4-SEQIRUS, INC. | 711
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 708
+RV5-MERCK & CO. INC. | 706
+FLUA4-SEQIRUS, INC. | 681
+FLUC4-SEQIRUS, INC. | 661
+VARZOS-MERCK & CO. INC. | 637
+HEPA-MERCK & CO. INC. | 634
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 578
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 569
+DTAPIPVHIB-SANOFI PASTEUR | 566
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 539
+FLUR4-PROTEIN SCIENCES CORPORATION | 510
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 425
+HIBV-MERCK & CO. INC. | 382
+HIBV-SANOFI PASTEUR | 382
+IPV-SANOFI PASTEUR | 382
+DTAP-SANOFI PASTEUR | 349
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 338
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 244
+HEP-MERCK & CO. INC. | 225
+DTAPIPV-SANOFI PASTEUR | 200
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 184
+MENB-PFIZER\WYETH | 184
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 180
+HPV4-MERCK & CO. INC. | 138
+PPV-UNKNOWN MANUFACTURER | 131
+FLU3-SANOFI PASTEUR | 116
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 116
+TD-SANOFI PASTEUR | 113
+ANTH-EMERGENT BIOSOLUTIONS | 111
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 111
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 105
+TYP-BERNA BIOTECH, LTD. | 97
+YF-SANOFI PASTEUR | 95
+TYP-SANOFI PASTEUR | 91
+DTAP-UNKNOWN MANUFACTURER | 71
+HEP-UNKNOWN MANUFACTURER | 65
+FLUN4-MEDIMMUNE VACCINES, INC. | 63
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 63
+TDAP-UNKNOWN MANUFACTURER | 60
+RAB-SANOFI PASTEUR | 59
+MEN-UNKNOWN MANUFACTURER | 50
+HEPA-UNKNOWN MANUFACTURER | 44
+ADEN_4_7-TEVA PHARMACEUTICALS | 42
+EBZR-MERCK & CO. INC. | 40
+TTOX-UNKNOWN MANUFACTURER | 36
+MMR-UNKNOWN MANUFACTURER | 33
+FLU3-GLAXOSMITHKLINE BIOLOGICALS | 31
+TD-MASS. PUB HLTH BIOL LAB | 29
+DF-SANOFI PASTEUR | 28
+CHOL-PAXVAX | 27
+SMALL-SANOFI PASTEUR | 25
+FLUX-SANOFI PASTEUR | 24
+IPV-UNKNOWN MANUFACTURER | 24
+PNC-PFIZER\WYETH | 23
+HIBV-UNKNOWN MANUFACTURER | 22
+HPVX-UNKNOWN MANUFACTURER | 22
+DT-SANOFI PASTEUR | 20
+VARCEL-UNKNOWN MANUFACTURER | 20
+TD-UNKNOWN MANUFACTURER | 19
+JEV1-INTERCELL AG | 17
+DTPPVHBHPB-MSP VACCINE COMPANY | 14
+DTP-UNKNOWN MANUFACTURER | 13
+RVX-UNKNOWN MANUFACTURER | 12
+FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 12
+MNQ-UNKNOWN MANUFACTURER | 11
+FLU3-CSL LIMITED | 9
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 9
+RAB-UNKNOWN MANUFACTURER | 8
+DT-UNKNOWN MANUFACTURER | 6
+ANTH-UNKNOWN MANUFACTURER | 5
+MMRV-UNKNOWN MANUFACTURER | 5
+HEPAB-UNKNOWN MANUFACTURER | 5
+FLUN3-MEDIMMUNE VACCINES, INC. | 5
+6VAX-F-UNKNOWN MANUFACTURER | 5
+BCG-SANOFI PASTEUR | 4
+DTAPIPV-UNKNOWN MANUFACTURER | 3
+VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 3
+DTAP-SMITHKLINE BEECHAM | 3
+MEN-SANOFI PASTEUR | 3
+TYP-UNKNOWN MANUFACTURER | 2
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 2
+OPV-UNKNOWN MANUFACTURER | 2
+SMALL-UNKNOWN MANUFACTURER | 2
+HEPAB-SMITHKLINE BEECHAM | 2
+JEVX-UNKNOWN MANUFACTURER | 2
+FLUR3-PROTEIN SCIENCES CORPORATION | 2
+6VAX-F-SANOFI PASTEUR | 2
 CHOL-UNKNOWN MANUFACTURER | 1
-DTAPIPVHIB-UNKNOWN MANUFACTURER | 1
-OPV-UNKNOWN MANUFACTURER | 1
+MMR-GLAXOSMITHKLINE BIOLOGICALS | 1
+PER-UNKNOWN MANUFACTURER | 1
+TD-GLAXOSMITHKLINE BIOLOGICALS | 1
+TDAPIPV-UNKNOWN MANUFACTURER | 1
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
+IPV-PASTEUR MERIEUX CONNAUGHT | 1
 FLU(H1N1)-SANOFI PASTEUR | 1
-SMALL-UNKNOWN MANUFACTURER | 1
+6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 1
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 1
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
-VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 1
-MNQ-UNKNOWN MANUFACTURER | 1
+UNK-MERCK & CO. INC. | 1
+BCG-UNKNOWN MANUFACTURER | 1
+DTPHEP-UNKNOWN MANUFACTURER | 1
+TTOX-SANOFI PASTEUR | 1
+HEP-SMITHKLINE BEECHAM | 1
+DTP-SANOFI PASTEUR | 1
+DTOX-UNKNOWN MANUFACTURER | 1
+MU-UNKNOWN MANUFACTURER | 1
+IPV-PFIZER\WYETH | 1
+HEPATYP-GLAXOSMITHKLINE BIOLOGICALS | 1
+PNC10-GLAXOSMITHKLINE BIOLOGICALS | 1
+H5N1-SANOFI PASTEUR | 1
 ---
 # Total Deaths
 Vax Type | Deaths
 --- | ---
-COVID19 | 6844
-UNK | 135
-VARZOS | 24
-FLU4 | 12
-PNC13 | 12
-FLUX | 11
-HEP | 10
+COVID19 | 11020
+UNK | 181
+VARZOS | 48
+FLU4 | 39
+FLUX | 24
+PNC13 | 18
+HEP | 11
+HIBV | 11
+PPV | 8
 DTAPIPVHIB | 8
-HIBV | 7
-PPV | 6
 RAB | 6
+DTAPHEPBIP | 6
+RV5 | 6
 HEPA | 5
-RV5 | 5
-MMR | 4
+MMR | 5
+VARCEL | 4
+TDAP | 4
 DTAP | 4
-VARCEL | 3
-DTAPHEPBIP | 3
-HPV9 | 3
-TDAP | 2
+HPV9 | 4
+RV1 | 4
 MMRV | 2
-RV1 | 2
+MEN | 2
+FLUA4 | 2
 MENB | 1
 FLUR4 | 1
 MNQ | 1
-MEN | 1
 FLUC4 | 1
 HPV4 | 1
 DT | 1
+CHOL | 1
+FLUC3 | 1
 ---
 Vax ID | Deaths
 --- | ---
-COVID19-PFIZER\BIONTECH | 3148
-COVID19-MODERNA | 3058
-COVID19-JANSSEN | 610
-UNK-UNKNOWN MANUFACTURER | 135
-COVID19-UNKNOWN MANUFACTURER | 28
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 13
-PNC13-PFIZER\WYETH | 12
-FLUX-UNKNOWN MANUFACTURER | 11
-FLU4-SANOFI PASTEUR | 10
+COVID19-PFIZER\BIONTECH | 5324
+COVID19-MODERNA | 4540
+COVID19-JANSSEN | 1116
+UNK-UNKNOWN MANUFACTURER | 181
+COVID19-UNKNOWN MANUFACTURER | 40
+FLU4-SANOFI PASTEUR | 30
+FLUX-UNKNOWN MANUFACTURER | 23
+VARZOS-UNKNOWN MANUFACTURER | 19
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 18
+PNC13-PFIZER\WYETH | 18
+VARZOS-MERCK & CO. INC. | 11
 DTAPIPVHIB-SANOFI PASTEUR | 8
+PPV-MERCK & CO. INC. | 7
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 6
-VARZOS-UNKNOWN MANUFACTURER | 6
-VARZOS-MERCK & CO. INC. | 5
-PPV-MERCK & CO. INC. | 5
-RV5-MERCK & CO. INC. | 5
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 6
+RV5-MERCK & CO. INC. | 6
+MMR-MERCK & CO. INC. | 5
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 5
+HIBV-MERCK & CO. INC. | 5
 HEP-MERCK & CO. INC. | 5
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 4
-MMR-MERCK & CO. INC. | 4
-VARCEL-MERCK & CO. INC. | 3
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 3
-HIBV-MERCK & CO. INC. | 3
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 3
+VARCEL-MERCK & CO. INC. | 4
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 4
+HPV9-MERCK & CO. INC. | 4
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 4
+FLU4-SEQIRUS, INC. | 4
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 3
 HIBV-SANOFI PASTEUR | 3
 DTAP-SANOFI PASTEUR | 3
-HPV9-MERCK & CO. INC. | 3
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 3
 HEP-DYNAVAX TECHNOLOGIES CORPORATION | 2
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 2
 MMRV-MERCK & CO. INC. | 2
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 2
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 1
+MEN-UNKNOWN MANUFACTURER | 2
+FLUA4-SEQIRUS, INC. | 2
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1
 PPV-UNKNOWN MANUFACTURER | 1
 MENB-PFIZER\WYETH | 1
 FLUR4-PROTEIN SCIENCES CORPORATION | 1
 MNQ-SANOFI PASTEUR | 1
 TDAP-UNKNOWN MANUFACTURER | 1
-MEN-UNKNOWN MANUFACTURER | 1
 FLUC4-SEQIRUS, INC. | 1
-HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
 HEPA-MERCK & CO. INC. | 1
 HPV4-MERCK & CO. INC. | 1
 DT-SANOFI PASTEUR | 1
+CHOL-PAXVAX | 1
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 1
+FLUX-SANOFI PASTEUR | 1
 ---
 # Total Symptoms
 Vax Type | Symptoms
 --- | ---
-COVID19 | 2148384
-UNK | 13557
-VARZOS | 10032
-FLU4 | 2516
-PNC13 | 1448
-HPV9 | 1358
-TDAP | 1150
-FLUX | 1102
-PPV | 1095
-MMR | 840
-HEP | 788
-VARCEL | 783
-HIBV | 761
-HEPA | 722
-MNQ | 696
-RV5 | 657
-FLUC4 | 650
-DTAP | 605
-MENB | 527
-DTAPIPVHIB | 524
-MMRV | 454
-DTAPHEPBIP | 418
-FLUA4 | 393
-HPV4 | 389
-RAB | 358
-DTAPIPV | 315
-FLUR4 | 261
-RV1 | 245
-IPV | 234
-FLUA3 | 170
-ANTH | 142
-FLU3 | 130
-DF | 104
-SMALL | 81
-FLUC3 | 73
-TYP | 73
-TD | 73
-EBZR | 69
-ADEN_4_7 | 68
-PNC | 65
-YF | 60
-HEPAB | 60
-FLUN4 | 53
-RVX | 49
-CHOL | 47
-DT | 43
-HPVX | 39
-JEV1 | 28
-TTOX | 27
-MEN | 27
-FLUX(H1N1) | 11
-DTP | 10
-OPV | 10
+COVID19 | 3126973
+VARZOS | 45704
+UNK | 38124
+FLU4 | 19103
+PPV | 6174
+TDAP | 5769
+HPV9 | 5444
+VARCEL | 4476
+MNQ | 4093
+PNC13 | 4010
+FLUX | 4009
+MMR | 3968
+HEP | 3475
+HEPA | 3452
+MMRV | 2832
+HIBV | 2717
+FLUC4 | 2679
+DTAP | 2638
+MENB | 2573
+FLUA4 | 2482
+RV5 | 1969
+DTAPIPV | 1898
+DTAPIPVHIB | 1629
+FLUR4 | 1507
+DTAPHEPBIP | 1378
+IPV | 1085
+HPV4 | 768
+RAB | 679
+RV1 | 614
+ANTH | 593
+FLU3 | 577
+TD | 528
+HEPAB | 512
+TYP | 483
+FLUA3 | 437
+YF | 294
+FLUN4 | 249
+FLUC3 | 247
+SMALL | 240
+EBZR | 199
+ADEN_4_7 | 183
+DF | 173
+MEN | 124
+CHOL | 116
+TTOX | 116
+PNC | 100
+DT | 74
+HPVX | 70
+RVX | 66
+JEV1 | 65
+JEVX | 59
+DTP | 47
+DTPPVHBHPB | 36
+FLUX(H1N1) | 35
+FLUR3 | 21
+6VAX-F | 20
+OPV | 11
+BCG | 10
 FLU(H1N1) | 10
+FLUN3 | 8
+TDAPIPV | 7
+PER | 6
+HEPATYP | 6
 MNQHIB | 5
-FLUN3 | 3
+PNC10 | 4
+H5N1 | 4
+DTOX | 3
+MU | 3
 MENHIB | 1
+DTPHEP | 1
 ---
 Vax ID | Symptoms
 --- | ---
-COVID19-MODERNA | 997753
-COVID19-PFIZER\BIONTECH | 917289
-COVID19-JANSSEN | 228409
-UNK-UNKNOWN MANUFACTURER | 13557
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 7112
-COVID19-UNKNOWN MANUFACTURER | 4933
-VARZOS-UNKNOWN MANUFACTURER | 1962
-PNC13-PFIZER\WYETH | 1448
-HPV9-MERCK & CO. INC. | 1358
-FLU4-SANOFI PASTEUR | 1314
-FLUX-UNKNOWN MANUFACTURER | 1086
-VARZOS-MERCK & CO. INC. | 958
-PPV-MERCK & CO. INC. | 905
-MMR-MERCK & CO. INC. | 816
-VARCEL-MERCK & CO. INC. | 769
-RV5-MERCK & CO. INC. | 657
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 653
-FLUC4-SEQIRUS, INC. | 650
-TDAP-SANOFI PASTEUR | 570
-FLU4-SEQIRUS, INC. | 549
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 524
-DTAPIPVHIB-SANOFI PASTEUR | 522
-MMRV-MERCK & CO. INC. | 454
-MNQ-SANOFI PASTEUR | 419
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 418
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 399
-FLUA4-SEQIRUS, INC. | 393
-HPV4-MERCK & CO. INC. | 389
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 380
-HIBV-SANOFI PASTEUR | 366
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 356
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 339
-HEPA-MERCK & CO. INC. | 303
-DTAP-SANOFI PASTEUR | 279
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 275
-FLUR4-PROTEIN SCIENCES CORPORATION | 261
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 245
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 230
-HIBV-MERCK & CO. INC. | 226
-DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 212
-IPV-SANOFI PASTEUR | 196
-PPV-UNKNOWN MANUFACTURER | 190
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 170
-HEP-MERCK & CO. INC. | 170
-HEP-UNKNOWN MANUFACTURER | 154
-ANTH-EMERGENT BIOSOLUTIONS | 135
-MENB-PFIZER\WYETH | 128
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 108
-DF-SANOFI PASTEUR | 104
-DTAPIPV-SANOFI PASTEUR | 103
-HIBV-UNKNOWN MANUFACTURER | 98
-DTAP-UNKNOWN MANUFACTURER | 96
-SMALL-SANOFI PASTEUR | 79
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 73
-HIBV-GLAXOSMITHKLINE BIOLOGICALS | 71
-EBZR-MERCK & CO. INC. | 69
-ADEN_4_7-TEVA PHARMACEUTICALS | 68
-PNC-PFIZER\WYETH | 65
-YF-SANOFI PASTEUR | 60
-HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 60
-TDAP-UNKNOWN MANUFACTURER | 56
-FLU3-SANOFI PASTEUR | 55
-TYP-SANOFI PASTEUR | 54
-FLUN4-MEDIMMUNE VACCINES, INC. | 53
-RVX-UNKNOWN MANUFACTURER | 49
-CHOL-PAXVAX | 45
-HPVX-UNKNOWN MANUFACTURER | 39
-HEPA-UNKNOWN MANUFACTURER | 39
-IPV-UNKNOWN MANUFACTURER | 38
-DT-SANOFI PASTEUR | 38
-FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 34
-FLU3-CSL LIMITED | 28
-JEV1-INTERCELL AG | 28
-TD-SANOFI PASTEUR | 28
-TTOX-UNKNOWN MANUFACTURER | 27
-MEN-UNKNOWN MANUFACTURER | 27
-TD-UNKNOWN MANUFACTURER | 26
-MMR-UNKNOWN MANUFACTURER | 24
-TYP-BERNA BIOTECH, LTD. | 19
-TD-MASS. PUB HLTH BIOL LAB | 19
-FLUX-SANOFI PASTEUR | 16
-FLU3-GLAXOSMITHKLINE BIOLOGICALS | 13
-RAB-SANOFI PASTEUR | 12
-FLUX(H1N1)-UNKNOWN MANUFACTURER | 11
-DTP-UNKNOWN MANUFACTURER | 10
-OPV-UNKNOWN MANUFACTURER | 10
-VARCEL-UNKNOWN MANUFACTURER | 10
-ANTH-UNKNOWN MANUFACTURER | 7
-RAB-UNKNOWN MANUFACTURER | 7
-DT-UNKNOWN MANUFACTURER | 5
+COVID19-MODERNA | 1414339
+COVID19-PFIZER\BIONTECH | 1406219
+COVID19-JANSSEN | 299605
+UNK-UNKNOWN MANUFACTURER | 38117
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 35678
+FLU4-SANOFI PASTEUR | 9775
+VARZOS-UNKNOWN MANUFACTURER | 8226
+COVID19-UNKNOWN MANUFACTURER | 6810
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 6334
+PPV-MERCK & CO. INC. | 5724
+HPV9-MERCK & CO. INC. | 5444
+VARCEL-MERCK & CO. INC. | 4422
+PNC13-PFIZER\WYETH | 4010
+FLUX-UNKNOWN MANUFACTURER | 3971
+MMR-MERCK & CO. INC. | 3805
+FLU4-SEQIRUS, INC. | 2994
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 2820
+MMRV-MERCK & CO. INC. | 2818
+TDAP-SANOFI PASTEUR | 2723
+FLUC4-SEQIRUS, INC. | 2679
+FLUA4-SEQIRUS, INC. | 2482
+MNQ-SANOFI PASTEUR | 2452
+RV5-MERCK & CO. INC. | 1969
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 1813
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 1812
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 1805
+VARZOS-MERCK & CO. INC. | 1800
+DTAPIPVHIB-SANOFI PASTEUR | 1626
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1599
+FLUR4-PROTEIN SCIENCES CORPORATION | 1507
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 1378
+HEPA-MERCK & CO. INC. | 1369
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 1296
+DTAP-SANOFI PASTEUR | 1293
+HIBV-MERCK & CO. INC. | 1120
+HIBV-SANOFI PASTEUR | 1076
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1024
+IPV-SANOFI PASTEUR | 981
+HPV4-MERCK & CO. INC. | 768
+MENB-PFIZER\WYETH | 761
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 718
+HEP-MERCK & CO. INC. | 647
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 614
+DTAPIPV-SANOFI PASTEUR | 593
+ANTH-EMERGENT BIOSOLUTIONS | 520
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 489
+PPV-UNKNOWN MANUFACTURER | 450
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 437
+FLU3-SANOFI PASTEUR | 407
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 395
+DTAP-UNKNOWN MANUFACTURER | 318
+TYP-SANOFI PASTEUR | 318
+TD-SANOFI PASTEUR | 309
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 306
+HEP-UNKNOWN MANUFACTURER | 303
+YF-SANOFI PASTEUR | 294
+HEPA-UNKNOWN MANUFACTURER | 270
+FLUN4-MEDIMMUNE VACCINES, INC. | 249
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 247
+TDAP-UNKNOWN MANUFACTURER | 226
+HIBV-UNKNOWN MANUFACTURER | 215
+SMALL-SANOFI PASTEUR | 204
+EBZR-MERCK & CO. INC. | 199
+ADEN_4_7-TEVA PHARMACEUTICALS | 183
+DF-SANOFI PASTEUR | 173
+MMR-UNKNOWN MANUFACTURER | 161
+RAB-SANOFI PASTEUR | 148
+TYP-BERNA BIOTECH, LTD. | 130
+CHOL-PAXVAX | 114
+MEN-UNKNOWN MANUFACTURER | 110
+TTOX-UNKNOWN MANUFACTURER | 109
+TD-MASS. PUB HLTH BIOL LAB | 109
+TD-UNKNOWN MANUFACTURER | 104
+PNC-PFIZER\WYETH | 100
+IPV-UNKNOWN MANUFACTURER | 76
+ANTH-UNKNOWN MANUFACTURER | 73
+HPVX-UNKNOWN MANUFACTURER | 70
+RVX-UNKNOWN MANUFACTURER | 66
+JEV1-INTERCELL AG | 65
+FLU3-GLAXOSMITHKLINE BIOLOGICALS | 63
+HEPAB-UNKNOWN MANUFACTURER | 61
+DT-SANOFI PASTEUR | 60
+JEVX-UNKNOWN MANUFACTURER | 59
+HEPAB-SMITHKLINE BEECHAM | 56
+FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 54
+FLU3-CSL LIMITED | 53
+VARCEL-UNKNOWN MANUFACTURER | 48
+DTP-UNKNOWN MANUFACTURER | 43
+RAB-UNKNOWN MANUFACTURER | 42
+MNQ-UNKNOWN MANUFACTURER | 42
+FLUX-SANOFI PASTEUR | 38
+SMALL-UNKNOWN MANUFACTURER | 36
+DTPPVHBHPB-MSP VACCINE COMPANY | 36
+TYP-UNKNOWN MANUFACTURER | 35
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 35
+FLUR3-PROTEIN SCIENCES CORPORATION | 21
+IPV-PASTEUR MERIEUX CONNAUGHT | 18
+DT-UNKNOWN MANUFACTURER | 14
+MMRV-UNKNOWN MANUFACTURER | 14
+MEN-SANOFI PASTEUR | 14
+OPV-UNKNOWN MANUFACTURER | 11
+IPV-PFIZER\WYETH | 10
+DTAPIPV-UNKNOWN MANUFACTURER | 9
+6VAX-F-UNKNOWN MANUFACTURER | 9
+BCG-SANOFI PASTEUR | 8
+FLUN3-MEDIMMUNE VACCINES, INC. | 8
+6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 8
+TDAPIPV-UNKNOWN MANUFACTURER | 7
+UNK-MERCK & CO. INC. | 7
+TTOX-SANOFI PASTEUR | 7
+PER-UNKNOWN MANUFACTURER | 6
+TD-GLAXOSMITHKLINE BIOLOGICALS | 6
+VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 6
+HEPATYP-GLAXOSMITHKLINE BIOLOGICALS | 6
 FLU(H1N1)-SANOFI PASTEUR | 5
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 5
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 5
-VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 4
-FLUN3-MEDIMMUNE VACCINES, INC. | 3
+DTP-SANOFI PASTEUR | 4
+PNC10-GLAXOSMITHKLINE BIOLOGICALS | 4
+H5N1-SANOFI PASTEUR | 4
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 3
+DTAP-SMITHKLINE BEECHAM | 3
+6VAX-F-SANOFI PASTEUR | 3
+DTOX-UNKNOWN MANUFACTURER | 3
+MU-UNKNOWN MANUFACTURER | 3
 CHOL-UNKNOWN MANUFACTURER | 2
-DTAPIPVHIB-UNKNOWN MANUFACTURER | 2
-SMALL-UNKNOWN MANUFACTURER | 2
-MNQ-UNKNOWN MANUFACTURER | 2
+MMR-GLAXOSMITHKLINE BIOLOGICALS | 2
+BCG-UNKNOWN MANUFACTURER | 2
+HEP-SMITHKLINE BEECHAM | 2
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
+DTPHEP-UNKNOWN MANUFACTURER | 1
 ---
